force-app/main/default/objects/psa_Material__c/psa_Material__c.object-meta.xml
<CustomObject>
    <description>Materials needed for a project.</description>
    <label>Material</label>
    <nameField>
        <label>Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>